# linuxPrograms

./: .gitignore  Makefile.inc
IOModels/poll/: serverModel.c  serverModel.h
IOModels/select/: serverModel.c  serverModel.h
IOModels/sigio/: demo_sigio.c
crc/: crc16.c  crc32.c
daemonapi/: Makefile
daemonapi/src/: becomeDaemon.c  becomeDaemon.h  daemon_SIGHUP.c
daemonapi/test/: test_become_daemon.c
dataStruct/bitree/: bitree.c
dataStruct/list/src/: list.c  list.h
dataStruct/list/test/: SingleList_reverse.c
dataStruct/queue/: Makefile
lib/: Makefile
lib/pub/: error_functions.h  tlpi_hdr.h
lib/src/: error_functions.c  read_line.c
mqueue/: posix_mq.c
pgsjc/: Makefile  catch_SIGHUP.c  disc_SIGHUP.c
serialPortapi/: uart.c  uart.h
serialPortapi/test/: uartTest.c
signals/: Makefile  blockSigThenRestore.c  kill.c  sigHandler.c  signal.c
signals/pub/: signal_functions.h
signals/src/: signal_functions.c
sockapi/: CMakeLists.txt  Makefile  README.txt  etcp.c  etcp.h  tcp_client  tcp_server  udp_client  udp_server
sockapi/demo/heartBeat1/: README.txt  hb_client.c  hb_server.c  heartbeat.h
sockapi/demo/heartBeat2/: README.txt  hb_client.c  hb_server.c
sockapi/demo/keepalive/: keep.c
sockapi/demo/unixStream/: us_xfr.h  us_xfr_cl.c  us_xfr_sv.c
sockapi/libsrc/: etcp.c  etcp.h  skel.h
sockapi/test/: tcpclient.c  tcpserver.c  udpclient.c  udpserver.c
test/: a.out  myCp.c  myTee.c  simpleCopy.c  stdioCache.c  test.txt  verify_vfork.c
threads/: Makefile  simple_thread.c
users_groups/: Makefile
users_groups/src/: check_password.c
(+17 files in other folders)
